Blurred background for tablet format and font style changes correctly.

--- a/css/liavkoren.scss
+++ b/css/liavkoren.scss
@@ -59,6 +59,7 @@ body{
 	}
 	p {
 		font-family: 'raleway-light';
+		//font-family: 'raleway-regular';
 		font-size: 1.8em;
 		line-height: 1.25em;
 	}
@@ -190,6 +191,10 @@ h3{
 			//padding-bottom:-1px;
 			padding-top: 6px;
 			background-color: $navbar_background_hover;
+
+			&:first-child {
+				@include round-corner(30);
+			}
 		}
 		//
 		&:first-child {
@@ -206,6 +211,9 @@ h3{
 @media screen and (max-width: 759px)and (min-width: 520px) {
 	body{
 		width:100%;
+		p {
+			font-family: 'raleway-regular';
+		}
 	}
 	.nav-bar {
 	  display:block;
@@ -232,12 +240,24 @@ h3{
       float: left;
       font-size: 1.5em;
       border-bottom: 0; }
+	.background_image {
+		background-image: url(../images/index_background_800square_flipped.jpg);
+		background: $white top right no-repeat fixed;
+		position: relative;
+		widows: 100%;
+		z-index: 0;
+		-webkit-filter: blur(5px);
+		-moz-filter: blur(5px);
+		-o-filter: blur(5px);
+		-ms-filter: blur(5px);
+		filter: blur(5px);
+	}
 	.content-container{
 		width:100%;
 		margin:auto;
 		border: 1px solid;
-		background: $white top right no-repeat fixed;
-		background-image: url(../images/index_background_800square_flipped.jpg);
+		//background: $white top right no-repeat fixed;
+		//background-image: url(../images/index_background_800square_flipped.jpg);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		position: relative;
@@ -271,13 +291,11 @@ h3{
 		padding-bottom: 3%;
 		float:none;
 		top: 80px;
-
-		-webkit-filter: blur(5px);
-		-moz-filter: blur(5px);
-		-o-filter: blur(5px);
-		-ms-filter: blur(5px);
-		filter: blur(5px);
-
+		filter: none;
+		-webkit-filter: blur(0px);
+		-moz-filter: blur(0px);
+		-ms-filter: blur(0px);
+		filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='0')
 		/*overflow: none;*/}
 	.titleBar h1{
 		font-size:1.75em;
@@ -285,7 +303,14 @@ h3{
 		left:1.5em;
 	}
 }
+//////////////////////
 @media screen and (max-width: 519px) {
+////Phone
+	body{
+		p {
+			font-family: 'raleway-regular';
+		}
+	}
 	.nav-bar{
 		display:block;
 		float:left;
